--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
+<div id="carrito-icono" onclick="mostrarCarrito()">
+  🛒 <span id="cantidad-carrito">0</span>
+</div>
 <body>
   <section id="inicio">
     <h1>¡Bienvenido a Pixel@rte!</h1>
